--- a/.NetCore5.md
+++ b/.NetCore5.md
@@ -1,1 +1,24 @@
 
+# .NetCore Vscode-extension
+
+1. Essential ASP.NET core 3 snippet
+2. mssql for Visual Studio Code
+3. C#
+4. Dotnet core commands
+5. Auto-Using for C# 
+6. C# Namespace Autocompletion
+7. C# Extensions
+8. MSBuild project tools
+9. MSBuild project file tools
+
+* code --install-extension doggy8088.netcore-snippets
+* code --install-extension ms-mssql.mssql
+* code --install-extension ms-dotnettools.csharp
+* code --install-extension matijarmk.dotnet-core-commands
+* code --install-extension fudge.auto-using
+* code --install-extension adrianwilczynski.namespace
+* code --install-extension jchannon.csharpextensions
+* code --install-extension tintoy.msbuild-project-tools
+
+
+
